# EmbeddedIntentRecognizer

./: README.md
EmbeddedIntentRecognizer/: CMakeLists.txt  EmbeddedIntentRecognizer.cpp  EmbeddedIntentRecognizer.h
